# geoviz

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml
scripts/: gen_test_data.py
src/: colormap.c  data.c  data.h  http.h  http_curl.c  http_winhttp.c  main.c  mercator.h  render.c  render.h  spec.c  spec.h  tiles.c  tiles.h
test_specs/: nautical.json  points.json  tracks.json
tests/: fixture.parquet  gen_test_fixture.py  test_data.c  test_gen_data.py  test_mercator.c  test_spec.c
